2002-01-04  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-database.c: support storing names of clients
	and new ConfigDatabase3
	(client_alive_predicate): fix backward predicate; we were removing
	all live clients, and keeping all dead clients. Doh! Doh! Doh!

	* gconf/gconf.c (gconf_engine_notify_add): use
	add_listener_with_properties if available to send name of client
	to the server

	* gconf/GConf.idl: put in ConfigDatabase3 with a couple of new
	methods, just to make this file more horrible
	
2002-01-04  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c (main): if GCONF_DEBUG_OUTPUT is set, 
	enable gconf_log_debug_messages

2002-01-03  Havoc Pennington  <hp@pobox.com>

	* gconf/gconftool.c (main): honor
	GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL to do nothing for
	--makefile-install-mode
 
	* backends/xml-cache.c (cache_sync): fill in the error if we
	return a failure code.

2002-01-03  Havoc Pennington  <hp@pobox.com>

	* gconf.m4.in: Add quotes to
	GCONF_SCHEMA_FILE_DIR='$(sysconfdir)/gconf/schemas' so that "make
	install sysconfdir=/foo" will work. May break some conceivable 
	usage of this variable.

2001-12-22  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added portuguese (pt) to ALL_LINGUAS

2001-12-17  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-listeners.c: reference count the listeners, make a
	copy of listener lists and ref all listeners prior to doing the
	notifies, to minimize reentrancy screwups.

2001-12-17  Josh Barrow  <drleary@mac.com>

	* examples/basic-gconf-app.c:
	s/GLIB_DISABLE_DEPRECATED/G_DISABLE_DEPRECATED/

2001-12-17  Darin Adler  <darin@bentspoon.com>

	* doc/gconf/.cvsignore:
	* examples/.cvsignore:
	Update.

2001-12-11  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c (drop_old_clients): fix this

	* gconf/gconf-database.c (client_alive_predicate): fix spelling in
	log message

2001-12-11  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c (drop_old_clients): use